--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "app.js"
+    "homepage": "."
   },
   "keywords": [],
   "author": "",
